--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <center>
       <h1>Brawl Stars</h1>
       <img
-        src="/img/logobs.png"
+        src="img/logobs.png"
         alt="Logo de Brawl Stars"
         title="Logo de Brawl Stars"
-        width="350px"
+        width="200px"
       />
     </center>
     <p>
-      Brawl Stars es un videojuego multijugador para móviles disponible en
+      <strong>Brawl Stars</strong> es un videojuego multijugador para móviles disponible en
       Android y iOS, desarrollado por Supercell y lanzado globalmente en 2018.1​
       La versión beta del juego fue lanzada el 14 de junio de 2017 solo para
       Canadá, Australia y Nueva Zelanda con temáticas simples y mecánicas
@@ -64,7 +64,7 @@
       >
     </center>
     <br />
-    <img src="/img/juego.png" alt="Fotos de BrawlStars" width="100%" />
+    <img src="img/juego.png" alt="Fotos de BrawlStars" width="100%" />
     <h2>Juego</h2>
     <hr />
     <p>
@@ -77,7 +77,7 @@
       partidas amistosas, jugar en diferentes modos de juego en competitivo o en
       solitario, o incluso crear sus propios mapas de juego.
     </p>
-    <img src="/img/trofeos.png" alt="Trofeos de BrawlStars" width="100%" />
+    <img src="img/trofeos.png" alt="Trofeos de BrawlStars" width="100%" />
     <h2>Trofeos</h2>
     <hr />
     <p>
@@ -192,7 +192,7 @@
       </tr>
     </table>
     <br />
-    <img src="/img/mapas.png" alt="Mapas" width="100%" />
+    <img src="img/mapas.png" alt="Mapas" width="100%" />
     <h2>Modos de juego</h2>
     <hr />
     <p>
@@ -363,7 +363,7 @@
       habilidades estelares e Hipercargas.
     </p>
     <center>
-      <img src="/img/brawlers.png" alt="Brawlers" width="1000px" />
+      <img src="img/brawlers.png" alt="Brawlers" width="600px" />
     </center>
   </body>
 </html>
