Dando estilo a la pagina (CSS)

--- a/index.html
+++ b/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/icono.png" type="image/png" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Brawl Stars | WIKI</title>
-    <style>
-      body {
-        margin: 0 150px 0 150px;
-      }
-      img {
-        margin: 20px 0 20px 0;
-      }
-    </style>
   </head>
   <body>
     <center>
@@ -26,7 +19,7 @@
     </center>
     <p>
       <strong>Brawl Stars</strong> es un videojuego multijugador para móviles disponible en
-      Android y iOS, desarrollado por Supercell y lanzado globalmente en 2018.1​
+      Android y iOS, desarrollado por Supercell y lanzado globalmente en 2018.
       La versión beta del juego fue lanzada el 14 de junio de 2017 solo para
       Canadá, Australia y Nueva Zelanda con temáticas simples y mecánicas
       difíciles, mientras que la versión global se lanzó agregando un apartado
@@ -153,7 +146,7 @@
         2023, se denominaban Fichas de batalla.
       </p>
     </ul>
-    <h2>Premios Starr</h2>
+    <h3>Premios Starr</h3>
     <p>
       Tras eliminar las cajas, los jugadores reclamaban un nuevo sistema de
       recompensas aleatorias. Los Premios Starr tienen distintas rarezas y
