Añadiendo estilo al header

--- a/modos.html
+++ b/modos.html
@@ -10,20 +10,20 @@
 
   <body>
     <header>
+      <a href="#" class="logo">
+        <img
+          src="img/logobs.png"
+          alt="Logo de Brawl Stars"
+          title="Logo de Brawl Stars"
+          class="logo-img"
+        />
+        <h1 class="logo-nombre">Brawl Stars</h1>
+      </a>
       <nav>
-        <center>
-          <h1>Brawl Stars</h1>
-          <img
-            src="img/logobs.png"
-            alt="Logo de Brawl Stars"
-            title="Logo de Brawl Stars"
-            width="200px"
-          />
-        </center>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="personajes.html">Personajes</a></li>
-        <li><a href="modos.html">Modos de Juego</a></li>
-        <li><a href="eventos.html">Eventos</a></li>
+        <a class="nav-link" href="index.html">Inicio</a>
+        <a class="nav-link" href="personajes.html">Personajes</a>
+        <a class="nav-link" href="modos.html">Modos de Juego</a>
+        <a class="nav-link" href="eventos.html">Eventos</a>
       </nav>
     </header>
     <img src="img/mapas.png" alt="Mapas" width="100%" />
