Agregando el footer

--- a/modos.html
+++ b/modos.html
@@ -187,5 +187,16 @@
         </td>
       </tr>
     </table>
+    <footer>
+      <img src="img/logobs.png" alt="" class="logo-footer">
+      <ul class="footer-menu-container">
+        <li class="menu-item">Terms of Service</li>
+        <li class="menu-item">Privacy Policy</li>
+        <li class="menu-item">Parent's Guide</li>
+        <li class="menu-item">Safe and Fair Play Policy</li>
+        <li class="menu-item">Other Legal Docs</li>
+      </ul>
+      <span class="copyright">&copy;2024, Supercell Ltd. All rights reserved.</span>
+    </footer>
   </body>
 </html>
