--- a/eventos.html
+++ b/eventos.html
@@ -95,5 +95,16 @@
       doble Starr Drop diario. Para alcanzar el hito, se requería usar el pin de
       "pulgares arriba" o "like" en cualquier tipo de partida.
     </p>
+    <footer>
+      <img src="img/logobs.png" alt="" class="logo-footer">
+      <ul class="footer-menu-container">
+        <li class="menu-item">Terms of Service</li>
+        <li class="menu-item">Privacy Policy</li>
+        <li class="menu-item">Parent's Guide</li>
+        <li class="menu-item">Safe and Fair Play Policy</li>
+        <li class="menu-item">Other Legal Docs</li>
+      </ul>
+      <span class="copyright">&copy;2024, Supercell Ltd. All rights reserved.</span>
+    </footer>
   </body>
 </html>
