Formateando el codigo

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="../img/icono.png" type="png">
     <title>Brawl Stars WIKI - Eventos</title>
 </head>
+
 <body class="eventos">
     <header>
         <nav>
@@ -53,7 +55,9 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>BRAWL STARS CHAMPIONSHIP</h2>
-                            <p>Este es un evento competitivo donde los jugadores pueden avanzar en una serie de partidas difíciles para ganar grandes premios. Los mejores equipos pueden incluso clasificar para torneos internacionales.
+                            <p>Este es un evento competitivo donde los jugadores pueden avanzar en una serie de partidas
+                                difíciles para ganar grandes premios. Los mejores equipos pueden incluso clasificar para
+                                torneos internacionales.
                             </p>
                         </div>
                     </div>
@@ -62,7 +66,9 @@
                     <div class="box-1">
                         <div class="Info">
                             <h2>EVENTO: ROBO DEL JEFE</h2>
-                            <p>Los jugadores deben enfrentarse a un gigantesco jefe robot. Junto con tu equipo, debes hacerle todo el daño posible antes de que acabe el tiempo, pero ten cuidado con los robots más pequeños que te atacan mientras tanto.
+                            <p>Los jugadores deben enfrentarse a un gigantesco jefe robot. Junto con tu equipo, debes
+                                hacerle todo el daño posible antes de que acabe el tiempo, pero ten cuidado con los
+                                robots más pequeños que te atacan mientras tanto.
                             </p>
                         </div>
                     </div>
@@ -81,7 +87,8 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>EVENTO: PELEA ROBOTICA</h2>
-                            <p>TEn este evento de supervivencia, los jugadores deben defender una caja fuerte de oleadas de robots enemigos. Cuanto más tiempo sobrevivas, mayores serán las recompensas.
+                            <p>TEn este evento de supervivencia, los jugadores deben defender una caja fuerte de oleadas
+                                de robots enemigos. Cuanto más tiempo sobrevivas, mayores serán las recompensas.
                             </p>
                         </div>
                     </div>
@@ -108,14 +115,22 @@
             </div>
             <div class="redes-sociales">
                 <ul>
-                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg" alt="Twitter"></a></li>
-                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
-                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg" alt="Youtube"></a></li>
-                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
-                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
-                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img src="../icons/logo-apple.svg" alt="Apple"></a></li>
-                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO" target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
-                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
+                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg"
+                                alt="Twitter"></a></li>
+                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img
+                                src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
+                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg"
+                                alt="Youtube"></a></li>
+                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img
+                                src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
+                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img
+                                src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
+                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img
+                                src="../icons/logo-apple.svg" alt="Apple"></a></li>
+                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO"
+                            target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
+                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img
+                                src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
                 </ul>
             </div>
             <div class="informacion">
@@ -133,4 +148,5 @@
         </div>
     </footer>
 </body>
+
 </html>
