--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="../img/icono.png" type="png">
     <title>Brawl Stars WIKI</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -53,7 +55,13 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>JUEGO</h2>
-                            <p>El objetivo principal del juego es conseguir la mayor cantidad de trofeos y brawlers (los personajes de Brawl Stars), para progresar en un camino de trofeos. Los jugadores entran a diferentes modos de juego, con diferentes brawlers, cada uno con habilidades únicas, que luchan en diferentes modos de juego para subirlos de rango, de trofeos y de maestría. También los jugadores pueden unirse a clubes con sus compañeros o amigos y hacer partidas amistosas, jugar en diferentes modos de juego en competitivo o en solitario, o incluso crear sus propios mapas de juego.</p>
+                            <p>El objetivo principal del juego es conseguir la mayor cantidad de trofeos y brawlers (los
+                                personajes de Brawl Stars), para progresar en un camino de trofeos. Los jugadores entran
+                                a diferentes modos de juego, con diferentes brawlers, cada uno con habilidades únicas,
+                                que luchan en diferentes modos de juego para subirlos de rango, de trofeos y de
+                                maestría. También los jugadores pueden unirse a clubes con sus compañeros o amigos y
+                                hacer partidas amistosas, jugar en diferentes modos de juego en competitivo o en
+                                solitario, o incluso crear sus propios mapas de juego.</p>
                         </div>
                     </div>
                 </div>
@@ -61,7 +69,11 @@
                     <div class="box-1">
                         <div class="Info">
                             <h2>TROFEOS</h2>
-                            <p>Los trofeos son un conteo especial de las estadísticas del jugador. Se consiguen cuando ganas una partida. Tal como se consiguen al ganar, también pueden quitarte trofeos al perder. Si en un modo de juego 3v3, algún compañero posee menos trofeos, se añadirán algunos trofeos extra al acabar la partida y en caso de perderla no se descontará ninguno.
+                            <p>Los trofeos son un conteo especial de las estadísticas del jugador. Se consiguen cuando
+                                ganas una partida. Tal como se consiguen al ganar, también pueden quitarte trofeos al
+                                perder. Si en un modo de juego 3v3, algún compañero posee menos trofeos, se añadirán
+                                algunos trofeos extra al acabar la partida y en caso de perderla no se descontará
+                                ninguno.
                             </p>
                         </div>
                     </div>
@@ -80,8 +92,14 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>PREMIOS STARR</h2>
-                            <p>Tras eliminar las cajas, los jugadores reclamaban un nuevo sistema de recompensas aleatorias. Los Premios Starr tienen distintas rarezas y cuatro oportunidades de mejorarla, a cada oportunidad puede mejorar la rareza o quedarse como estaba, cada una las rarezas tienen distinta probabilidad de aparecer. Se pueden obtener en eventos, el camino de trofeos, niveles del pase y como recompensas por victorias diarias.
-                            También existen los Premios Starr competitivos, los cuales solo se pueden obtener en el modo Competitivo. Se obtienen al alcanzar las correspondientes marcas II y III en cada rango principal (menos en Maestros).
+                            <p>Tras eliminar las cajas, los jugadores reclamaban un nuevo sistema de recompensas
+                                aleatorias. Los Premios Starr tienen distintas rarezas y cuatro oportunidades de
+                                mejorarla, a cada oportunidad puede mejorar la rareza o quedarse como estaba, cada una
+                                las rarezas tienen distinta probabilidad de aparecer. Se pueden obtener en eventos, el
+                                camino de trofeos, niveles del pase y como recompensas por victorias diarias.
+                                También existen los Premios Starr competitivos, los cuales solo se pueden obtener en el
+                                modo Competitivo. Se obtienen al alcanzar las correspondientes marcas II y III en cada
+                                rango principal (menos en Maestros).
                             </p>
                         </div>
                     </div>
@@ -108,14 +126,22 @@
             </div>
             <div class="redes-sociales">
                 <ul>
-                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg" alt="Twitter"></a></li>
-                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
-                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg" alt="Youtube"></a></li>
-                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
-                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
-                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img src="../icons/logo-apple.svg" alt="Apple"></a></li>
-                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO" target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
-                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
+                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg"
+                                alt="Twitter"></a></li>
+                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img
+                                src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
+                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg"
+                                alt="Youtube"></a></li>
+                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img
+                                src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
+                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img
+                                src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
+                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img
+                                src="../icons/logo-apple.svg" alt="Apple"></a></li>
+                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO"
+                            target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
+                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img
+                                src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
                 </ul>
             </div>
             <div class="informacion">
@@ -133,4 +159,5 @@
         </div>
     </footer>
 </body>
+
 </html>
