--- a/pages/modos.html
+++ b/pages/modos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="../img/icono.png" type="png">
     <title>Brawl Stars WIKI - Modos de Juego</title>
 </head>
+
 <body class="modos">
     <header>
         <nav>
@@ -53,7 +55,9 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>ATRAPAGEMAS</h2>
-                            <p>En este modo, los equipos deben capturar gemas que aparecen en el centro del mapa y mantenerlas hasta que un equipo tenga 10 gemas por 15 segundos para ganar. Es un modo que requiere coordinación y control del área.
+                            <p>En este modo, los equipos deben capturar gemas que aparecen en el centro del mapa y
+                                mantenerlas hasta que un equipo tenga 10 gemas por 15 segundos para ganar. Es un modo
+                                que requiere coordinación y control del área.
                             </p>
                         </div>
                     </div>
@@ -62,7 +66,8 @@
                     <div class="box-1">
                         <div class="Info">
                             <h2>SUPERVIVENCIA</h2>
-                            <p>Los jugadores luchan para ser los últimos en pie en un mapa que se va reduciendo. Pueden jugar solos o en parejas. Es un modo rápido y estratégico donde cada decisión cuenta.
+                            <p>Los jugadores luchan para ser los últimos en pie en un mapa que se va reduciendo. Pueden
+                                jugar solos o en parejas. Es un modo rápido y estratégico donde cada decisión cuenta.
                             </p>
                         </div>
                     </div>
@@ -81,7 +86,9 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>BALON BRAWL</h2>
-                            <p>Los equipos compiten para marcar goles en la portería contraria. Es un modo similar al fútbol, donde la clave está en saber cuándo atacar y cuándo defender para lograr la victoria.
+                            <p>Los equipos compiten para marcar goles en la portería contraria. Es un modo similar al
+                                fútbol, donde la clave está en saber cuándo atacar y cuándo defender para lograr la
+                                victoria.
                             </p>
                         </div>
                     </div>
@@ -108,14 +115,22 @@
             </div>
             <div class="redes-sociales">
                 <ul>
-                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg" alt="Twitter"></a></li>
-                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
-                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg" alt="Youtube"></a></li>
-                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
-                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
-                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img src="../icons/logo-apple.svg" alt="Apple"></a></li>
-                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO" target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
-                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
+                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg"
+                                alt="Twitter"></a></li>
+                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img
+                                src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
+                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg"
+                                alt="Youtube"></a></li>
+                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img
+                                src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
+                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img
+                                src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
+                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img
+                                src="../icons/logo-apple.svg" alt="Apple"></a></li>
+                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO"
+                            target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
+                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img
+                                src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
                 </ul>
             </div>
             <div class="informacion">
@@ -133,4 +148,5 @@
         </div>
     </footer>
 </body>
+
 </html>
