--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="../img/icono.png" type="png">
     <title>Brawl Stars WIKI - Personajes</title>
 </head>
+
 <body class="personajes">
     <header>
         <nav>
@@ -53,7 +55,10 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>BRAWLERS</h2>
-                            <p>Los brawlers son los personajes jugables en Brawl Stars, cada uno con habilidades únicas que se adaptan a diferentes estilos de juego. Desde luchadores cuerpo a cuerpo hasta tiradores de largo alcance, los jugadores pueden elegir entre una amplia variedad de brawlers para dominar el campo de batalla.
+                            <p>Los brawlers son los personajes jugables en Brawl Stars, cada uno con habilidades únicas
+                                que se adaptan a diferentes estilos de juego. Desde luchadores cuerpo a cuerpo hasta
+                                tiradores de largo alcance, los jugadores pueden elegir entre una amplia variedad de
+                                brawlers para dominar el campo de batalla.
                             </p>
                         </div>
                     </div>
@@ -62,7 +67,10 @@
                     <div class="box-1">
                         <div class="Info">
                             <h2>RAREZAS</h2>
-                            <p>Los brawlers se dividen en diferentes rarezas: Común, Poco Común, Superespecial, Épico, Mítico, Legendario y Cromático. Cada brawler tiene su propia dificultad de obtención, y cuanto más rara es su categoría, más difíciles son de conseguir, pero también más poderosas pueden ser sus habilidades.
+                            <p>Los brawlers se dividen en diferentes rarezas: Común, Poco Común, Superespecial, Épico,
+                                Mítico, Legendario y Cromático. Cada brawler tiene su propia dificultad de obtención, y
+                                cuanto más rara es su categoría, más difíciles son de conseguir, pero también más
+                                poderosas pueden ser sus habilidades.
                             </p>
                         </div>
                     </div>
@@ -81,7 +89,10 @@
                     <div class="box-2">
                         <div class="Info">
                             <h2>SKINS</h2>
-                            <p>Las skins permiten a los jugadores personalizar el aspecto de sus brawlers. Algunas skins cambian no solo el diseño, sino también los efectos visuales de los ataques. Las skins pueden adquirirse a través de la tienda o eventos especiales, lo que da un toque único a cada partida.
+                            <p>Las skins permiten a los jugadores personalizar el aspecto de sus brawlers. Algunas skins
+                                cambian no solo el diseño, sino también los efectos visuales de los ataques. Las skins
+                                pueden adquirirse a través de la tienda o eventos especiales, lo que da un toque único a
+                                cada partida.
                             </p>
                         </div>
                     </div>
@@ -108,14 +119,22 @@
             </div>
             <div class="redes-sociales">
                 <ul>
-                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg" alt="Twitter"></a></li>
-                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
-                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg" alt="Youtube"></a></li>
-                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
-                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
-                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img src="../icons/logo-apple.svg" alt="Apple"></a></li>
-                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO" target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
-                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
+                    <li><a href="https://x.com/supercell" target="_blank"><img src="../icons/logo-twitter.svg"
+                                alt="Twitter"></a></li>
+                    <li><a href="https://www.facebook.com/supercell" target="_blank"><img
+                                src="../icons/logo-facebook.svg" alt="Facebook"></a></li>
+                    <li><a href="https://www.youtube.com/supercell" target="_blank"><img src="../icons/logo-youtube.svg"
+                                alt="Youtube"></a></li>
+                    <li><a href="https://www.linkedin.com/company/supercell" target="_blank"><img
+                                src="../icons/logo-linkedin.svg" alt="Linkedin"></a></li>
+                    <li><a href="https://www.instagram.com/supercell" target="_blank"><img
+                                src="../icons/logo-instagram.svg" alt="Instagram"></a></li>
+                    <li><a href="https://apps.apple.com/es/developer/supercell/id488106216" target="_blank"><img
+                                src="../icons/logo-apple.svg" alt="Apple"></a></li>
+                    <li><a href="https://play.google.com/store/apps/dev?id=6715068722362591614&hl=es_BO"
+                            target="_blank"><img src="../icons/logo-google-playstore.svg" alt="Playstore"></a></li>
+                    <li><a href="https://www.reddit.com/r/Brawlstars/" target="_blank"><img
+                                src="../icons/logo-reddit.svg" alt="Reddit"></a></li>
                 </ul>
             </div>
             <div class="informacion">
@@ -133,4 +152,5 @@
         </div>
     </footer>
 </body>
+
 </html>
